third part divs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Template</title>
 </head>
 <body>
+    <div id="third-part">
+        <div id="third-part-content">
+            
+        </div>
+    </div>
+
     <div ></div>
 </body>
 </html>
