third part inner divs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
 
     <div id="third-part">
         <div id="third-part-content">
-            
+            <div class="third-part-content-inner">
+                <div class="third-part-content-inner-items"></div>
+                <div class="third-part-content-inner-items"></div>
+                <div class="third-part-content-inner-items"></div>
+            </div>
+            <div class="third-part-content-inner">
+                <div class="third-part-content-inner-items"></div>
+                <div class="third-part-content-inner-items"></div>
+                <div class="third-part-content-inner-items"></div>
+            </div>
         </div>
     </div>
 
