adding flex-wrap to divs

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <div id="div2">
-        <div>
-            <h1 class="num">01</h1>
-            <h2 class="title">Awesome <b>Image</b></h2>
-            <h3 class="text">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse erhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorrper nisi nunc, et molestie ipsum iaculis sit amet.</h3>
-        </div>
-        <div>
-            <h1 class="num">02</h1>
-            <h2 class="title">Fresh and <b>Creative</b></h2>
-            <h3 class="text">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse erhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorrper nisi nunc, et molestie ipsum iaculis sit amet.</h3>
-        </div>
+        <div id="div-wrap">
+            <div class="div-inner">
+                <h1 class="num">01</h1>
+                <h2 class="title">Awesome <b>Image</b></h2>
+                <h3 class="text">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse erhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorrper nisi nunc, et molestie ipsum iaculis sit amet.</h3>
+            </div>
+            <div class="div-inner">
+                <h1 class="num">02</h1>
+                <h2 class="title">Fresh and <b>Creative</b></h2>
+                <h3 class="text">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse erhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorrper nisi nunc, et molestie ipsum iaculis sit amet.</h3>
+            </div>
+        </div>   
     </div>
 
     <div id="third-part">
