third part down div content added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                 </div>
             </div>
         </div>
+        <div id="third-part-content-down">
+            <div id="third-part-content-down-content">
+                <div>
+                    <span>Floral Design Studio</span></br>
+                    <span>Custom interior studio, is a qualified interior designer, who comes from a Film & TV background, during all the years she worked in the film industry, she had the opportunity to work hand in hand with the best art directors. This experience gave her great knowledge of design culture, the key to create ambiences for people to live in, and the most important thing, her passion for design.</span>
+                </div>
+                <div>
+                    <span>Personal attention, creative solutions. The studio is built on strong client relationship, personal attentiveness, ability to find the right solutions, and an eye for the details that make each space unique.Marks of identity: "To offer my clients a style that makes them feel comfortable and suits their personality".What defines my job: "The space, the object, the piece of furniture, the fabric, and any other element that helps me create the unique ambience my clients are looking for"</span>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div ></div>
