--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="third-part-content-down">
             <div id="third-part-content-down-content">
                 <div>
-                    <span>Floral Design Studio</span></br>
+                    <span id="third-part-content-down-content-main-span">Floral <bold>Design Studio</bold></span></br>
                     <span>Custom interior studio, is a qualified interior designer, who comes from a Film & TV background, during all the years she worked in the film industry, she had the opportunity to work hand in hand with the best art directors. This experience gave her great knowledge of design culture, the key to create ambiences for people to live in, and the most important thing, her passion for design.</span>
                 </div>
                 <div>
