added second div with css settings

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="div2">
-        <div id="div-wrap">
+        <div class="div-wrap">
             <div class="div-inner">
                 <h1 class="num">01</h1>
                 <h2 class="title">Awesome <b>Image</b></h2>
@@ -21,7 +21,19 @@
             </div>
         </div>   
     </div>
-
+    <div id="div3">
+        <div class="div-wrap">
+            <div id="first">
+                <h2>SAMPLE TEXT. CLICK TO SELECT THE TEXT BOX. CLICK<br>OR DOUBLE CLICK TO START EDITING THE TEXT.</h2>
+            </div>
+            <div id="second">
+                <div id="bottom-div">
+                    <h1>Green and Healthy</h1>
+                    <button>READ MORE</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="third-part">
         <div id="third-part-content">
             <div class="third-part-content-inner">
