background images, media, and wrap fixing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>   
     </div>
     <div id="div3">
-        <div class="div-wrap">
+        <div class="div-wrap-2">
             <div id="first">
                 <h2>SAMPLE TEXT. CLICK TO SELECT THE TEXT BOX. CLICK<br>OR DOUBLE CLICK TO START EDITING THE TEXT.</h2>
             </div>
@@ -32,7 +32,7 @@
                     <button>READ MORE</button>
                 </div>
             </div>
-        </div>
+        
     </div>
     <div id="third-part">
         <div id="third-part-content">
