Made 1st section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Template</title>
 </head>
 <body>
+    <div id="div1">
+        <div id="div1-inner">
+            <div id="div1-box"></div>
+        </div>
+    </div>
     <div id="div2">
         <div class="div-wrap">
             <div class="div-inner">
