Almost finished 1st part

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <body>
         <div id="div1">
             <div id="div1-inner">
-                <div id="div1-box"></div>
+                <div id="div1-box">
+                    <div id="div1-box-inner">
+                    <h6>Green is the prime color of the world</h6>
+                    <h1>
+                        <b>Nature</b>
+                        is placed with 
+                        <b>simplicity</b>
+                    </h1>
+                    </div>
+                </div>
             </div>
         </div>
 
