--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Template</title>
 </head>
 <body>
-    <div ></div>
+    <div class="part-six">
+        <div class="picture-1"></div>
+        <div class="picture-2">
+            <h1>Green Atelier</h1>
+            <p>THIS IS YOUR ASSISTANT</p>
+            <h2>IN DESIGN</h2>
+        </div>
+    </div>
 </body>
 </html>
