added text style and code for responsive design(but need to fix)

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
         </div>
     </div>
 
-    <div ></div>
     <div class="part-six">
-        <div class="picture-1"></div>
-        <div class="picture-2">
-            <h1>Green Atelier</h1>
-            <p>THIS IS YOUR ASSISTANT</p>
-            <h2>IN DESIGN</h2>
+        <div class="div-wrap">
+            <div class="picture-1"></div>
+            <div class="picture-2">
+                <h1>Green Atelier</h1>
+                <p>THIS IS YOUR ASSISTANT</p>
+                <h2>IN DESIGN</h2>
+            </div>
         </div>
     </div>
 </body>
