--- a/index.html
+++ b/index.html
@@ -71,13 +71,19 @@
             </div>
         </div>
     </div>
-
     <div class="part-six">
             <div class="picture-1"></div>
             <div class="picture-2">
                 <h1>Green Atelier</h1>
                 <p>THIS IS YOUR ASSISTANT</p>
                 <h2>IN DESIGN</h2>
+            </div>
+    </div>
+    <div class="part-seven">
+            <div class="part-seven-place-holder">
+                <div class="part-seven-content">
+                    <div class="part-seven-contet-text"></div>
+                </div>
             </div>
     </div>
 </body>
