--- a/index.html
+++ b/index.html
@@ -89,9 +89,19 @@
         <div class="part-seven">
             <div class="part-seven-place-holder">
                 <div class="part-seven-content">
-                    <div class="part-seven-contet-text"></div>
+                    <div class="part-seven-content-text">
+                        <h1>Subscribe</h1>
+                    </div>
+                    <div class="part-seven-content-buttonAndInput">
+                        <div class="part-seven-input">
+                            <input type="text" placeholder="Enter a valid emile address">
+                        </div>
+                        <div class="part-seven-button">
+                            <a href=""><button>Submit</button></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-    </div>
+        </div>
 </body>
 </html>
